--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -9,10 +9,15 @@ const { data } = Astro.props;
   />
   <h3>{data.productdisplayname}</h3>
   <p class="subtle">Tshirts | Nike</p>
-  <p class="price">DKK <span>1595</span>,-</p>
+  <p class="price">
+    DKK <span class={data.discount ? "onsale" : "fullprice"}>{data.price}</span
+    >,-
+  </p>
   <div class="discounted">
-    <p>Now DKK <span></span>,-</p>
-    <p><span></span>%</p>
+    <p>
+      Now DKK {Math.round(data.price - (data.price * data.discount) / 100)},-
+    </p>
+    <p>{data.discount}%</p>
   </div>
   <a href="product.html">Read More</a>
 </article>
